--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,20 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19.4
+minecraft_version=1.20.1
+
 enabled_platforms=quilt,fabric,forge
 
 archives_base_name=command_extractor
 mod_version=1.1.0
 maven_group=ioecmcomc.command_extractor
 
-architectury_version=8.1.79
+architectury_version=9.1.12
 
-fabric_loader_version=0.14.19
-fabric_api_version=0.78.0+1.19.4
+fabric_loader_version=0.14.23
+fabric_api_version=0.90.4+1.20.1
 
-forge_version=1.19.4-45.0.43
+forge_version=1.20.1-47.2.1
 
-quilt_loader_version=0.19.0-beta.11
-quilt_fabric_api_version=6.0.0-beta.3+0.76.0-1.19.4
+quilt_loader_version=0.21.2-beta.2
+quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
+    
