--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.20.1
+minecraft_version=1.20.4
 
 enabled_platforms=quilt,fabric,forge
 
@@ -8,13 +8,14 @@ archives_base_name=command_extractor
 mod_version=1.1.1
 maven_group=ioecmcomc.command_extractor
 
-architectury_version=9.1.12
+architectury_version=11.1.17
 
-fabric_loader_version=0.14.23
-fabric_api_version=0.90.4+1.20.1
+fabric_loader_version=0.15.3
+fabric_api_version=0.92.0+1.20.4
 
-forge_version=1.20.1-47.2.1
+forge_version=1.20.4-49.1.21
 
-quilt_loader_version=0.21.2-beta.2
-quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
-    
+quilt_loader_version=0.28.0-beta.4
+quilt_fabric_api_version=9.0.0-alpha.8+0.97.0-1.20.4
+
+modrinth_id=YNDj0qRJ
