impl: Update to Minecraft 1.21.1, adopt NeoForge instead of Forge, temporarily exclude Quilt

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,22 @@
-org.gradle.jvmargs=-Xmx2048M
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
 
-minecraft_version=1.20.4
-
-enabled_platforms=quilt,fabric,forge
-
-archives_base_name=command_extractor
+# Mod properties
 mod_version=1.1.1
-maven_group=ioecmcomc.command_extractor
+maven_group=ioecmcomc.command_extractor 
+archives_name = command_extractor
+enabled_platforms = quilt,fabric,neoforge
 
-architectury_version=11.1.17
+# Minecraft properties
+minecraft_version = 1.21.1
 
-fabric_loader_version=0.15.3
-fabric_api_version=0.92.0+1.20.4
-
-forge_version=1.20.4-49.1.21
-
-quilt_loader_version=0.28.0-beta.4
-quilt_fabric_api_version=9.0.0-alpha.8+0.97.0-1.20.4
+# Dependencies
+architectury_api_version = 13.0.8
+fabric_loader_version = 0.16.13
+fabric_api_version = 0.115.4+1.21.1
+neoforge_version = 21.1.145
+quilt_loader_version=0.29.0-beta.5
+quilt_fabric_api_version=11.0.0-alpha.3+0.102.0-1.21
 
 modrinth_id=YNDj0qRJ
