--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -15,25 +15,28 @@ logoFile = "command_extractor_icon.png"
 displayURL = "https://github.com/IoeCmcomc/command_extractor"
 
 [[dependencies.command_extractor]]
-modId = "forge"
-mandatory = true
-versionRange = "[49,)"
+modId = "neoforge"
+type = "required"
+versionRange = "[21.1,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.command_extractor]]
 modId = "minecraft"
-mandatory = true
-versionRange = "[1.20.4,)"
+type = "required"
+versionRange = "[1.21.1,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.command_extractor]]
 modId = "architectury"
-mandatory = true
-versionRange = "[11.1.17,)"
+type = "required"
+versionRange = "[13.0.8,)"
 ordering = "AFTER"
 side = "BOTH"
 
 [modproperties.command_extractor]
    catalogueImageIcon="command_extractor_icon.png"
+
+[[mixins]]
+config = "command_extractor.mixins.json"
