--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.1.2"
+    id "com.github.johnrengelman.shadow" version '8.1.1'
 }
 
 repositories {
@@ -27,7 +27,7 @@ dependencies {
     modImplementation "org.quiltmc:quilt-loader:${rootProject.quilt_loader_version}"
     modApi "org.quiltmc.quilted-fabric-api:quilted-fabric-api:${rootProject.quilt_fabric_api_version}"
     // Remove the next few lines if you don't want to depend on the API
-    modApi("dev.architectury:architectury-fabric:${rootProject.architectury_version}") {
+    modApi("dev.architectury:architectury-fabric:${rootProject.architectury_api_version}") {
         // We must not pull Fabric Loader from Architectury Fabric
         exclude group: "net.fabricmc"
         exclude group: "net.fabricmc.fabric-api"
@@ -77,7 +77,7 @@ components.java {
 publishing {
     publications {
         mavenQuilt(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
+            artifactId = rootProject.archives_name + "-" + project.name
             from components.java
         }
     }
