--- a/settings.gradle
+++ b/settings.gradle
@@ -2,15 +2,15 @@ pluginManagement {
     repositories {
         maven { url "https://maven.fabricmc.net/" }
         maven { url "https://maven.architectury.dev/" }
-        maven { url "https://maven.minecraftforge.net/" }
+        maven { url "https://files.minecraftforge.net/maven/" }
         gradlePluginPortal()
     }
 }
 
+rootProject.name = "command_extractor"
+
 include("common")
 include("fabric-like")
 include("fabric")
-include("quilt")
-include("forge")
-
-rootProject.name = "command_extractor"
+// include("quilt")
+include("neoforge")
